# MusicBot

./: pyproject.toml  requirements.txt
musicbot/: __init__.py
