[tool.poetry]
name = "musicbot"
version = "0.0.1"
description = "A discord music bot"
authors = ["rehket <aalbright425@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynacl = "^1.5.0"
discord-py = {extras = ["voice"], version = "^2.3.2"}
yt-dlp = "^2023.12.30"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
